Update JVM